# TauriHands

./: .eslintrc.js  .gitignore  AGENTS.md  CODEX_EVENTS.jsonl  CONCEPT.md  LAST_RESPONSE.md  MILESTONES.md  Makefile  PLAN.md  PROTOCOLS.md  README.md  REPAIR_RESPONSE.md  RUNLOG.md  UI_STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  test_automation_engine.py  test_automation_simple.py  test_cli_functions.py  test_codex.py  test_end_to_end.py  test_error_recovery.py  test_progress_monitoring.py  tsconfig.json  vite.config.ts
.github/workflows/: clippy-check.yml
scripts/: codex-loop.patched.py  codex-loop.ps1
scripts/memory/: lancedb_store.py
src/: App.vue  main.ts  style-backup.css  style-modern.css  style.css
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/automation/: engine.rs  executor.rs  mod.rs  monitor.rs  planner.rs  recovery.rs  validator.rs
src-tauri/src/cli/: commands.rs  config.rs  main.rs  mod.rs  server.rs  tui.rs
src-tauri/src/services/: agent.rs  audit.rs  codex.rs  judge.rs  kernel-backup.rs  kernel.rs  llm.rs  llm_async.rs  mod.rs  performance.rs  performance_commands.rs  pty.rs  pty_async.rs  tool_dispatcher.rs  tools.rs  workspace.rs
src/agents/: orchestrator.ts
src/components/: AgentPanel-backup.vue  AgentPanel.vue  ChatPanel.vue  CyberScene.vue  DiffPanel.vue  EvidenceList.vue  GitPanel.vue  LLMSettingsPanel-backup.vue  LLMSettingsPanel.vue  LoopPanel.vue  MissionPanel.vue  PanelShell.vue  PlanPanel.vue  StatusPills.vue  StreamPreview.vue  TerminalPanel.vue  ThemeToggle-Simple.vue  ThemeToggle.vue  TimelinePanel.vue  WorkbenchTabs.vue  WorkspacePanel.vue  WorkspaceTreeNode.vue
src/composables/: useTheme.ts
src/layouts/: AppShell-Element.vue  AppShell-Modern.vue  AppShell.vue
src/pages/: ConsolePage.vue  LLMSettingsPage.vue  SecuritySettingsPage.vue  ToolSettingsPage.vue
src/router/: index.ts
src/stores/: git.ts  loop.ts  mission.ts  plan.ts  terminal.ts  timeline.ts  tools.ts
src/styles/: animations.css  base.css  layout.css  (+11 more)
(+56 files in other folders)
