[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = []
cli = ["dep:clap", "dep:crossterm", "dep:ratatui", "dep:tokio-tungstenite", "dep:webbrowser", "dep:dirs", "dep:toml", "dep:env_logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "native-tls"] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"], optional = true }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.26", optional = true }
anyhow = "1.0"
thiserror = "1.0"
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
webbrowser = { version = "0.8", optional = true }
env_logger = { version = "0.10", optional = true }
log = { version = "0.4" }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"

[dev-dependencies]

[profile.release]
# Optimize for performance in release builds
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Enable debug info in development builds
debug = true
overflow-checks = true
